Add credit comment

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,3 +48,4 @@
     {% endif %}
   </body>
 </html>
+<!-- original file from https://github.com/pages-themes/cayman/blob/730c880446265740bd91b904133a776f4db3a157/_layouts/default.html -->
